--- a/diapos/config.org
+++ b/diapos/config.org
@@ -30,3 +30,4 @@
 #+LATEX_HEADER: \newunit{\watthour}{Wh}
 #+LATEX_HEADER: \newunit{\amperehour}{Ah}
 #+LATEX_HEADER: \hypersetup{colorlinks=true, linkcolor=Blue, urlcolor=Blue}
+#+LATEX_HEADER: \renewcommand{\thefootnote}{\fnsymbol{footnote}}
